# guile-pastebin

./: .gitignore  Makefile.am  README  THANKS  configure.ac  gnupaste-server.in  gnupaste.scm  guix.scm  pastebin.scm  pre-inst-env.in
gnupaste/: config.scm.in  paste.scm  render.scm  template.scm
pastebin/: config.scm  config.scm.in  controller.scm  paste.scm  render.scm  router.scm  template.scm
scripts/: gnupaste.in  pastebin.in
static/css/: pastebin.css
twitter/: bootstrap.scm
web/: util.scm
